fixed footer cutoff when resized window

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,9 +40,9 @@ body {
     color: #ffffff;
     font-family: 'Georgia', Times, Times New Roman, serif;
     width: 250px;
-    height: 50px;
+    height: 20px;
     text-align: center;
-    padding: 15px 20px;
+    padding: 30px 20px;
     position: absolute;
     margin: auto;
 }
@@ -135,10 +135,15 @@ li a {
     color: #777777;
 }
 
+a:hover {
+    color: orange;
+}
+
 #footer {
-    position: absolute;
+    position: sticky;
     margin: auto;
     width: 100%;
+    min-width: 960px;
     height: 50px;
     background-color: #666666;
     border-style: solid none none none;
